--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang=" " dir="ltr">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Title Of The Document</title>
+    <title>Document Title</title>
   </head>
 
   <body>
