Add Modhouse Project Link

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             UX Research: Emphasis on similar products and their characteristics. Ideate through wireframe designing. Test with potential users to determine specific design and functionaity decisions. Prototype final designs, showcasing functionality.
             UI Design: Sketch: All designs were created using Sketch. Branding Copywriting Image Curation
           </p><!-- end paragraph -->
-          <a href="">Read more</a><!-- button or link label -->
+          <a href="modhouse.html">Read more</a><!-- button or link label -->
         </div><!-- end second column -->
       </div><!-- end row that holds (2) columns for the project -->
     </div>
