Turn CV Link Into Button

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
             Why do you think UI Design is valuable?
             UI Design enables designers to create interactive products for digital devices that provide solutions for the product’s user base. This design evolution into the digital age has been increadibly important to how we experience life and solve problems today. UI Design is a key fundamental in creating balance between the visual esthetic of a product and the functionality and purpose it provides.
            </p>
-           <a href="files/cv2021.pdf" Target="_blank">Download My Resume</a><!-- button or link label -->
+           <a href="files/cv2021.pdf" class="button">View My Resume</a><!-- button or link label -->
          </div>
          <div><!-- Column 2 -->
           <h2> Skills & Tools </h2>
