--- a/modhouse.html
+++ b/modhouse.html
@@ -118,7 +118,8 @@
       Prefer sending an email?
     </p>
       <div>
-        <a href="mailto:chapin.r.mathews@gmail.com"> Send Email </a>
+        <a href="mailto:chapin.r.mathews@gmail.com" class="button">Send Email</a><!-- button or link label -->
+
       </div>
       <div><!--Social Media Layout and Placeholders-->
         <a href="Instagram">
