Add ID tags to sections

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
       </div>
     </header>
 <main>
-  <div>
+  <div> id="hero">
     <div>
       <h1> Hi, My name is Chapin Mathews.<br><span> I'm a UI Designer based in Richmond Va! </span> </h1>
       <p>This is a paragraph.</p1>
     </div>
   </div>
 
-  <div>
+  <div> id="work">
     <div>
       <h2> Projects </h2>
       <div><!-- open row that holds (2) columns for project -->
@@ -59,7 +59,7 @@
 </main>
 
 <footer>
-  <div>
+  <div> id="contact">
     <h2> Get In Touch </h2>
     <p>
       Do you like my work and want to discuss opportunities?
