Add ID + Class Coding to Page Sections in about.html
This enables you to css style particular sections of a page.

--- a/about.html
+++ b/about.html
@@ -13,7 +13,8 @@
   <body>
     <header>
       <div>
-        <img src="https://via.placeholder.com/150x50?text=ChapinMathews" alt="Chapin Mathews" >
+      <div class="container">
+        <img class="logo" src="https://via.placeholder.com/150x50?text=ChapinMathews" alt="Chapin Mathews" >
         <nav>
           <ul>
             <li><a href="index.html" class="my-link" id="my-link">Work</a></li>
@@ -24,13 +25,13 @@
       </div>
     </header>
 <main>
-  <div><!-- Section -->
-    <div><!-- Container -->
+  <div id="about">
+    <div class="container">
       <h1> About </h1>
     </div>
   </div>
-  <div><!-- Section -->
-   <div><!-- Container -->
+  <div id="about"><!-- Section -->
+    <div class="container"><!-- Container -->
      <picture>
       <source srcset="img/aboutme/me@1.png" media="(max-width:767px)">
       <img src="img/aboutme/me@1.png" alt="Me">
@@ -91,8 +92,8 @@
   </div><!-- Close section -->
 </main>
 
-<footer>
-  <div>
+<footer id="footer">
+  <div class="container">
     <h2> Get In Touch </h2>
     <p>
       Do you like my work and want to discuss opportunities?
