Adding Classes to Page Sections index.html

--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
     </header>
 <main>
   <div id="hero">
-    <div>
+    <div class="container">
       <h1> Hi, My name is Chapin Mathews.<br><span> I'm a UI Designer based in Richmond Va! </span> </h1>
       <p>This is a paragraph.</p1>
     </div>
   </div>
 
   <div id="work">
-    <div>
+    <div class="container">
       <h2> Projects </h2>
-      <div><!-- open row that holds (2) columns for project -->
+      <div class="row"><!-- open row that holds (2) columns for project -->
         <div><!-- open first column (used for image) -->
           <picture>
             <source srcset="img/homepage/modhouse/modhouse@2.png" media="(max-width:767px)">
@@ -58,8 +58,8 @@
   </div>
 </main>
 
-<footer>
-  <div id="contact">
+<footer id="footer">
+  <div class="container">
     <h2> Get In Touch </h2>
     <p>
       Do you like my work and want to discuss opportunities?
