Add ID + Class Coding For Page Sections modhouse.html

--- a/modhouse.html
+++ b/modhouse.html
@@ -24,13 +24,13 @@
       </div>
     </header>
 <main>
-  <div><!-- Section -->
-    <div><!-- Container -->
+  <div id="modhouse">
+    <div class="container">
       <h1> Modhouse </h1>
     </div>
   </div>
-  <div><!-- Section -->
-   <div><!-- Container -->
+  <div id="modhouse">
+    <div class="container">
      <picture>
       <source srcset="img/modhouse/modhouseintro@2.png" media="(max-width:767px)">
       <img src="img/modhouse/modhouseintro@2.png" alt="Modhouse">
@@ -109,8 +109,8 @@
     </div>
 </main>
 
-<footer>
-  <div>
+<footer id="footer">
+  <div class="container">
     <h2> Get In Touch </h2>
     <p>
       Do you like my work and want to discuss opportunities?
