--- a/modhouse.html
+++ b/modhouse.html
@@ -12,8 +12,8 @@
 
   <body>
     <header>
-      <div>
-        <img src="https://via.placeholder.com/150x50?text=ChapinMathews" alt="Chapin Mathews" >
+      <div class="container">
+        <img class="logo" src="https://via.placeholder.com/150x50?text=ChapinMathews" alt="Chapin Mathews" >
         <nav>
           <ul>
             <li><a href="index.html" class="my-link" id="my-link">Work</a></li>
