Change ID to Story about.html

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
       <h1> About </h1>
     </div>
   </div>
-  <div id="about"><!-- Section -->
+  <div id="story"><!-- Section -->
     <div class="container"><!-- Container -->
      <picture>
       <source srcset="img/aboutme/me@1.png" media="(max-width:767px)">
