Add class="row" about.html x2

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
       <source srcset="img/aboutme/me@1.png" media="(max-width:767px)">
       <img src="img/aboutme/me@1.png" alt="Me">
      </picture>
-     <div><!-- Row -->
+     <div class="row"><!-- Row -->
         <div><!-- Column 1 -->
           <h2> My Story </h2>
            <p>
@@ -58,7 +58,7 @@
          </div>
          <div><!-- Column 2 -->
           <h2> Skills & Tools </h2>
-              <div><!-- row -->
+              <div class="row"><!-- row -->
                 <div><!-- Column -->
                   <h3> Relevant Skills </h3>
                    <ul>
