--- a/index.html
+++ b/index.html
@@ -54,6 +54,26 @@
           <a href="modhouse.html" class="button">Read more</a><!-- button or link label -->
         </div><!-- end second column -->
       </div><!-- end row that holds (2) columns for the project -->
+      <div class="row"><!-- open row that holds (2) columns for project -->
+        <div><!-- open first column (used for image) -->
+          <picture>
+            <source srcset="img/homepage/nestegg/nestegg@2.png" media="(max-width:767px)">
+            <img src="img/homepage/nestegg/nestegg@2.png" alt="Nestegg">
+          </picture>
+        </div><!-- end first column -->
+        <div><!-- open second column (used for text) -->
+          <h3> NESTEGG </h3><!-- heading for the project -->
+          <p><!-- open paragraph -->
+            NESTEGG assists users to reach financial goals by customizing a uniquely plan for optimum success. Users have several ways to utilize NESTEGG depending on their goals within an easy to use interface.
+          </p><!-- close paragraph -->
+          <p><!-- open paragraph -->
+            Skills Employed
+            UX Research: Emphasis on similar products and their characteristics. Ideate through wireframe designing. Test with potential users to determine specific design and functionaity decisions. Prototype final designs, showcasing functionality.
+            UI Design: Sketch: All designs were created using Sketch. Branding Copywriting Image Curation
+          </p><!-- end paragraph -->
+          <a href="modhouse.html" class="button">Read more</a><!-- button or link label -->
+        </div><!-- end second column -->
+      </div><!-- end row that holds (2) columns for the project -->
     </div>
   </div>
 </main>
