--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div id="hero">
     <div class="container">
       <h1> Hi, My name is Chapin Mathews.<br><span> I'm a UI Designer based in Richmond Va! </span> </h1>
-      <p>This is a paragraph.</p1>
+      <p>Check out my work!</p1>
     </div>
   </div>
 
