--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <div>
         <a href="mailto:chapin.r.mathews@gmail.com" class="button">Send Email</a><!-- button or link label -->
       </div>
-      <div><!--Social Media Layout and Placeholders-->
+      <div class="social"><!--Social Media Layout and Placeholders-->
         <a href="Instagram">
           <svg viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><radialGradient id="a" cx="65.2875" cy="1.3" gradientUnits="userSpaceOnUse" r="147.795"><stop offset="0" stop-color="#f9ed32"/><stop offset=".36" stop-color="#ee2a7b"/><stop offset=".44" stop-color="#d22a8a"/><stop offset=".6" stop-color="#8b2ab2"/><stop offset=".83" stop-color="#1b2af0"/><stop offset=".88" stop-color="#002aff"/></radialGradient><rect fill="url(#a)" height="64" rx="11.2" transform="matrix(-1 0 0 -1 64 64)" width="64"/><g fill="#fff"><path d="m44 56h-24a12 12 0 0 1 -12-12v-24a12 12 0 0 1 12-12h24a12 12 0 0 1 12 12v24a12 12 0 0 1 -12 12zm-24-43.2a7.21 7.21 0 0 0 -7.2 7.2v24a7.21 7.21 0 0 0 7.2 7.2h24a7.21 7.21 0 0 0 7.2-7.2v-24a7.21 7.21 0 0 0 -7.2-7.2z"/><path d="m32 45.6a13.6 13.6 0 1 1 13.6-13.6 13.61 13.61 0 0 1 -13.6 13.6zm0-22.4a8.8 8.8 0 1 0 8.8 8.8 8.81 8.81 0 0 0 -8.8-8.8z"/><circle cx="45.6" cy="19.2" r="2.4"/>
           </g>
