--- a/modhouse.html
+++ b/modhouse.html
@@ -40,7 +40,7 @@
          designer furntiure created in North America. Users have the option to
          browse and purchase products that have been eco-rated.
        </p>
-       <div><!-- Row -->
+       <div class="row"><!-- Row -->
          <h2> The Process </h2>
           <picture>
           <source srcset="img/modhouse/research@2.png" media="(max-width:767px)">
