Change Footer ID to Contact

--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
   </div><!-- Close section -->
 </main>
 
-<footer id="footer">
+<footer id="contact">
   <div class="container">
     <h2> Get In Touch </h2>
     <p>
