Add Column Class index.html

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
          <div><!-- Column 2 -->
           <h2> Skills & Tools </h2>
               <div class="row"><!-- row -->
-                <div><!-- Column -->
+                <div class="col-md-6"><!-- Column -->
                   <h3> Relevant Skills </h3>
                    <ul>
                      <li>UX Design and Research</li>
@@ -72,7 +72,7 @@
                      <li>Creative Consulting</li>
                    </ul>
                  </div>
-                 <div><!-- Column 2 -->
+                 <div class="col-md-6"><!-- Column 2 -->
                   <h3> Tools I Use </h3>
                    <ul>
                     <li>Apple Macbook Pro</li>
