--- a/about.html
+++ b/about.html
@@ -32,8 +32,8 @@
   <div id="story"><!-- Section -->
     <div class="container"><!-- Container -->
      <picture>
-      <source srcset="img/aboutme/me@1.png" media="(max-width:767px)">
-      <img src="img/aboutme/me@1.png" alt="Me">
+      <source srcset="img/aboutme/me@1.png" class="profilephoto" media="(max-width:767px)">
+      <img src="img/aboutme/me@1.png" class="profilephoto" alt="Me">
      </picture>
      <div class="row"><!-- Row -->
         <div><!-- Column 1 -->
