--- a/index.html
+++ b/index.html
@@ -46,11 +46,6 @@
           <p><!-- open paragraph -->
             MODHOUSE connects users to ethically and sustainably produced designer furntiure created in North America. Users have the option to browse and purchase products that have been eco-rated.
           </p><!-- close paragraph -->
-          <p><!-- open paragraph -->
-            Skills Employed
-            UX Research: Emphasis on similar products and their characteristics. Ideate through wireframe designing. Test with potential users to determine specific design and functionaity decisions. Prototype final designs, showcasing functionality.
-            UI Design: Sketch: All designs were created using Sketch. Branding Copywriting Image Curation
-          </p><!-- end paragraph -->
           <a href="modhouse.html" class="button">Read more</a><!-- button or link label -->
         </div><!-- end second column -->
       </div><!-- end row that holds (2) columns for the project -->
@@ -66,12 +61,7 @@
           <p><!-- open paragraph -->
             NESTEGG assists users to reach financial goals by customizing a uniquely plan for optimum success. Users have several ways to utilize NESTEGG depending on their goals within an easy to use interface.
           </p><!-- close paragraph -->
-          <p><!-- open paragraph -->
-            Skills Employed
-            UX Research: Emphasis on similar products and their characteristics. Ideate through wireframe designing. Test with potential users to determine specific design and functionaity decisions. Prototype final designs, showcasing functionality.
-            UI Design: Sketch: All designs were created using Sketch. Branding Copywriting Image Curation
-          </p><!-- end paragraph -->
-          <a href="modhouse.html" class="button">Read more</a><!-- button or link label -->
+          <a href="nestegg.html" class="button">Read more</a><!-- button or link label -->
         </div><!-- end second column -->
       </div><!-- end row that holds (2) columns for the project -->
     </div>
