Update Hero Copy

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 <main>
   <div id="hero">
     <div class="container">
-      <h1> Hi, My name is Chapin Mathews.<br><span> I'm a UI Designer based in Richmond Va! </span> </h1>
-      <p>Check out my work!</p1>
+      <h2> Hi, My name is Chapin Mathews.<br><span> I'm a UI Designer based in Richmond, VA! </span> </h2>
+      <p>Welcome to my website!</p1>
     </div>
   </div>
 
