--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
     <div class="container">
       <h2> Projects </h2>
       <div class="row"><!-- open row that holds (2) columns for project -->
-        <div><!-- open first column (used for image) -->
+        <div class="column col-md-6 col-lg-7"><!-- open first column (used for image) -->
           <picture>
             <source srcset="img/homepage/modhouse/modhouse@2.png" media="(max-width:767px)">
             <img src="img/homepage/modhouse/modhouse@2.png" alt="Modhouse">
           </picture>
         </div><!-- end first column -->
-        <div><!-- open second column (used for text) -->
+        <div class="column col-md-6 col-lg-5"><!-- open second column (used for text) -->
           <h3> MODHOUSE </h3><!-- heading for the project -->
           <p><!-- open paragraph -->
             MODHOUSE connects users to ethically and sustainably produced designer furntiure created in North America. Users have the option to browse and purchase products that have been eco-rated.
@@ -50,13 +50,13 @@
         </div><!-- end second column -->
       </div><!-- end row that holds (2) columns for the project -->
       <div class="row"><!-- open row that holds (2) columns for project -->
-        <div><!-- open first column (used for image) -->
+        <div class="column col-md-6 col-lg-7"><!-- open first column (used for image) -->
           <picture>
             <source srcset="img/homepage/nestegg/nestegg@2.png" media="(max-width:767px)">
             <img src="img/homepage/nestegg/nestegg@2.png" alt="Nestegg">
           </picture>
         </div><!-- end first column -->
-        <div><!-- open second column (used for text) -->
+        <div class="column col-md-6 col-lg-5"><!-- open second column (used for text) -->
           <h3> NESTEGG </h3><!-- heading for the project -->
           <p><!-- open paragraph -->
             NESTEGG assists users to reach financial goals by customizing a uniquely plan for optimum success. Users have several ways to utilize NESTEGG depending on their goals within an easy to use interface.
