--- a/modhouse.html
+++ b/modhouse.html
@@ -16,9 +16,9 @@
         <img class="logo" src="https://via.placeholder.com/150x50?text=ChapinMathews" alt="Chapin Mathews" >
         <nav>
           <ul>
-            <li><a href="index.html" class="my-link" id="my-link">Work</a></li>
-            <li><a href="about.html" class="my-link" id="my-link">About</a></li>
-            <li><a href="#contact" class="my-link" id="my-link">Contact</a></li>
+            <li><a href="index.html" class="my-link">Work</a></li>
+            <li><a href="about.html" class="my-link">About</a></li>
+            <li><a href="#contact" class="my-link">Contact</a></li>
           </ul>
         </nav>
       </div>
