--- a/modhouse.html
+++ b/modhouse.html
@@ -111,7 +111,7 @@
     </div>
 </main>
 
-<footer id="footer">
+<footer id="contact">
   <div class="container">
     <h2> Get In Touch </h2>
     <p>
