--- a/modhouse.html
+++ b/modhouse.html
@@ -29,7 +29,7 @@
       <h1> Modhouse </h1>
     </div>
   </div>
-  <div id="modhouse">
+  <div id="modhouseproj">
     <div class="container">
      <picture>
       <source srcset="img/modhouse/modhouseintro@2.png" media="(max-width:767px)">
