Correct Secondary Hero Type

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
   <div id="hero">
     <div class="container">
       <h2> Hi, My name is Chapin Mathews.<br><span> I'm a UI Designer based in Richmond, VA! </span> </h2>
-      <p>Welcome to my website!</p1>
+      <p>
+        Welcome to my website!
+      </p>
     </div>
   </div>
 
