--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="column col-md-6 col-lg-5"><!-- open second column (used for text) -->
           <h3> NESTEGG </h3><!-- heading for the project -->
           <p><!-- open paragraph -->
-            NESTEGG assists users to reach financial goals by customizing a uniquely plan for optimum success. Users have several ways to utilize NESTEGG depending on their goals within an easy to use interface.
+            NESTEGG assists users in reaching financial goals by customizing a uniquely tailored plan for optimum success. Users have several ways to utilize NESTEGG depending on their goals, within an easy to use interface.
           </p><!-- close paragraph -->
           <a href="nestegg.html" class="button">Read more</a><!-- button or link label -->
         </div><!-- end second column -->
