Update div id's

--- a/nestegg.html
+++ b/nestegg.html
@@ -24,12 +24,12 @@
       </div>
     </header>
 <main>
-  <div id="modhouse">
+  <div id="nestegg">
     <div class="container">
       <h1>Nestegg</h1>
     </div>
   </div>
-  <div id="modhouse">
+  <div id="nesteggproj">
     <div class="container">
      <picture>
       <source srcset="img/modhouse/modhouseintro@2.png" media="(max-width:767px)">
