--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Chapin Mathews</title>
+    <title>Chapin Mathews-About</title>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -13,7 +13,7 @@
   <body>
     <header>
       <div class="container">
-        <img class="logo" src="https://via.placeholder.com/150x50?text=ChapinMathews" alt="Chapin Mathews" >
+        <img class="logo" src="file:///Users/chapinmathews/Desktop/Portfolio%20Site%20(Chapin%20Mathews)/img/homepage/logodraft.svg" alt="Chapin Mathews" >
         <nav>
           <ul>
             <li><a href="index.html" class="my-link">Work</a></li>
@@ -26,7 +26,7 @@
 <main>
   <div id="about">
     <div class="container">
-      <h1>About</h1>
+      <h1></h1>
     </div>
   </div>
   <div id="story"><!-- Section -->
@@ -36,8 +36,8 @@
       <img src="img/aboutme/me@1.png" class="profilephoto" alt="Me">
      </picture>
      <div class="row"><!-- Row -->
-        <div><!-- Column 1 -->
-          <h2> My Story </h2>
+        <div class="col-lg-12"><!-- Column 1 -->
+          <h2> About </h2>
            <p>
             Where are you based?
             I am currently based in Richmond Virginia.
@@ -57,9 +57,9 @@
            <a href="files/cv2021.pdf" class="button">View My Resume</a><!-- button or link label -->
          </div>
          <div><!-- Column 2 -->
-          <h2> Skills & Tools </h2>
-              <div class="row"><!-- row -->
-                <div class="col-md-6"><!-- Column -->
+              <div class="row skilltools"><!-- row -->
+                <h2> Skills & Tools </h2>
+                <div class="col-md-6 col-lg-12"><!-- Column -->
                   <h3> Relevant Skills </h3>
                    <ul>
                      <li>UX Design and Research</li>
@@ -72,7 +72,7 @@
                      <li>Creative Consulting</li>
                    </ul>
                  </div>
-                 <div class="col-md-6"><!-- Column 2 -->
+                 <div class="col-md-6 col-lg-12"><!-- Column 2 -->
                   <h3> Tools I Use </h3>
                    <ul>
                     <li>Apple Macbook Pro</li>
