--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <div class="container">
-        <img class="logo" src="https://via.placeholder.com/150x50?text=ChapinMathews" alt="Chapin Mathews" >
+        <img class="logo" src="file:///Users/chapinmathews/Desktop/Portfolio%20Site%20(Chapin%20Mathews)/img/homepage/logodraft.svg" alt="Chapin Mathews" >
         <nav>
           <ul>
             <li><a href="index.html" class="my-link">Work</a></li>
