--- a/index.html
+++ b/index.html
@@ -1040,6 +1040,6 @@
        <p> COPYWRITE Chapin Mathews 2021 </p>
   </div>
 </footer>
-<script src="js/scripts.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
