--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
         <nav>
           <ul>
             <li><a href="index.html" class="my-link">Work</a></li>
-            <li><a href="about.html" class="my-link">About</a></li>
+            <li class="active"><a href="about.html" class="my-link">About</a></li>
             <li><a href="#contact" class="my-link">Contact</a></li>
           </ul>
         </nav>
