Add active class

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img class="logo" src="img/homepage/logodraft.svg" alt="Chapin Mathews" >
         <nav>
           <ul>
-            <li><a href="index.html" class="my-link">Work</a></li>
+            <li class="active"><a href="index.html" class="my-link">Work</a></li>
             <li><a href="about.html" class="my-link">About</a></li>
             <li><a href="#contact" class="my-link">Contact</a></li>
           </ul>
