--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
       <img src="img/aboutme/me@1.png" class="profilephoto" alt="Me">
      </picture>
      <div class="row"><!-- Row -->
-        <div class="col-lg-12"><!-- Column 1 -->
+        <div class="col-md-12 col-lg-7"><!-- Column 1 -->
           <h2> About </h2>
            <p>
             Where are you based?
@@ -56,7 +56,7 @@
            </p>
            <a href="files/cv2021.pdf" class="button">View My Resume</a><!-- button or link label -->
          </div>
-         <div><!-- Column 2 -->
+         <div class="col-md-12 col-lg-5"><!-- Column 2 -->
               <div class="row skilltools"><!-- row -->
                 <h2> Skills & Tools </h2>
                 <div class="col-md-6 col-lg-12"><!-- Column -->
