--- a/nestegg.html
+++ b/nestegg.html
@@ -20,7 +20,7 @@
           <ul>
             <li class="active"><a href="index.html" class="my-link">Work</a></li>
             <li><a href="about.html" class="my-link">About</a></li>
-            <li><a href="#contact" class="my-link" onclick="menuToggle()">Contact</a></li>
+            <li><a href="#contact" class="my-link">Contact</a></li>
             <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
           </ul>
         </nav>
