--- a/about.html
+++ b/about.html
@@ -42,23 +42,23 @@
      <div class="row"><!-- Row -->
         <div class="col-md-12 col-lg-7"><!-- Column 1 -->
           <h2> About </h2>
-           <p>
-            Where are you based?
-            I am currently based in Richmond Virginia.
+          <p>
+          <h4>Where are you based?</h4>
+            I'm currently based in Richmond Virginia.
 
-            How do your spend your free time?
-            I find inspiration through traveling and exploring new locations and cultures, whether domestic or international. I am an avid film photographer which is a skill that accompanies every travel opportunity. When I am not traveling and working on photography, I’m usually playing guitar or tuning into a good film.
+            <h4> What inspires you?</h4>
+            I find inspiration through travel and use film photography to document the places, people and things I cross paths with. These captured moments are a gate way to my creative process and assist in understanding how I visually see and filter the world around me.
 
-            What’s a fun fact about you?
-            In 2014 I received my Yoga Teacher Training Certificate from Shoshoni Yoga Ashram in Rollinsville, CO and in 2017 received a meditation certification with my teacher Yashoda Devi Ma. Both of these modalities are daily disciplines that greatly increase my quality of life.
+            <h4>What’s a fun fact about you?</h4>
+            In 2014 I received a Yoga Teacher Training Certificate from Shoshoni Yoga Ashram in Rollinsville, CO.
 
-            What’s your professional experience?
-            In 2009 I received a Bachelor of Fine Arts (BFA) degree in Material Studies from Virginia Commonwealth University (VCU) in Richmond, VA. Upon graduating, I spent the next 10 years traveling and living across the United States as a creative producer. From 2010 to 2015, I was predominately a studio painter and began reteaching myself graphic design as requests for logos, album covers, and event posters came in. In 2016, I reemerged creatively as a photographer and produced a photojournalism project titled “Diverse Dwellings”, covering stories on alternative living along the west coast. I went on to assist the obscure fashion-photographer Bil Brown in Los Angeles in 2017. In 2018 I was the executive producer for a short film titled “ORIGIN” where I managed a cast and crew of 23 people and a $70k production budget. These experiences culminated a path towards becoming a designer.
+            <h4>What’s your professional experience?</h4>
+            In 2009 I received a Bachelor of Fine Arts (BFA) degree in Material Studies from Virginia Commonwealth University (VCU) in Richmond, VA. I spent the next 10 years living and traveling across America as a creative producer. From 2010-2015, I produced studio paintings and began working as a freelance graphic designer. In 2016, I reemerged with my childhood passion for photography and produced a photojournalism project titled “Diverse Dwellings”, covering stories on alternative living along the west coast. I went on to assist the obscure fashion-photographer Bil Brown in Los Angeles the following year in 2017. In 2018 I was the executive producer for a short film titled “ORIGIN” where I managed a cast and crew of 23 people and a $70k production budget. I have been the creative consultant for a number of business in California and Virginia. I currently work as a user interface designer and fine artist.
 
-            Why do you think UI Design is valuable?
-            UI Design enables designers to create interactive products for digital devices that provide solutions for the product’s user base. This design evolution into the digital age has been increadibly important to how we experience life and solve problems today. UI Design is a key fundamental in creating balance between the visual esthetic of a product and the functionality and purpose it provides.
-           </p>
-           <a href="files/cv2021.pdf" class="button">View My Resume</a><!-- button or link label -->
+            <h4>Why do you think UI Design is valuable?</h4>
+            Modern day technology has an undeniable influence on our lives today. In this current 'digital age', digital products and interfaces provide convenience and solutions to many basic tasks we perform daily. User Interface Design is one key fundamental in creating balance between the visual esthetic of a product and the functionality and purpose it provides to a specific audience.
+          </p>
+          <a href="files/cv2021.pdf" class="button">View My Resume</a><!-- button or link label -->
          </div>
          <div class="col-md-12 col-lg-5"><!-- Column 2 -->
               <div class="row skilltools"><!-- row -->
@@ -68,7 +68,7 @@
                    <ul>
                      <li>UX Design and Research</li>
                      <li>UI Design</li>
-                     <li>Frontend Development (Basic Knowledge)</li>
+                     <li>Front-End Development</li>
                      <li>Graphic Design</li>
                      <li>Photography</li>
                      <li>Branding</li>
@@ -97,11 +97,10 @@
 
 <footer id="contact">
   <div class="container">
-    <h2> Get In Touch </h2>
+    <h2> Contact </h2>
     <p>
-      Do you like my work and want to discuss opportunities?
-      Please get in touch. Call: <a href="tel:+8889990000">+8889990000</a> or Skype me at <a href="skype:hello.careerfoundry">hello.careerfoundry</a>.
-      Prefer sending an email?
+      Would you like to get in touch?
+      Send me an email or connect with me on social!
     </p>
       <div>
         <a href="mailto:chapin.r.mathews@gmail.com" class="button">Send Email</a><!-- button or link label -->
