--- a/about.html
+++ b/about.html
@@ -36,8 +36,8 @@
   <div id="story"><!-- Section -->
     <div class="container"><!-- Container -->
      <picture>
-      <source srcset="img/aboutme/me@1.png" class="profilephoto" media="(max-width:767px)">
-      <img src="img/aboutme/me@1.png" class="profilephoto" alt="Me">
+      <source srcset="img/aboutme/profilepicture@1.png" class="profilephoto" media="(max-width:767px)">
+      <img src="img/aboutme/profilepicture@1.png" class="profilephoto" alt="Me">
      </picture>
      <div class="row"><!-- Row -->
         <div class="col-md-12 col-lg-7"><!-- Column 1 -->
