--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <main>
   <div id="hero">
     <div class="container">
-      <h2> Hi, My name is Chapin Mathews.<br><span> I'm a UI Designer based in Richmond, VA! </span> </h2>
+      <h2> Hi, My name is Chapin Mathews.<br><span> I'm a UI Designer based in Richmond, VA </span> </h2>
       <p>
         Welcome to my website!
       </p>
@@ -74,9 +74,9 @@
         <div class="column col-md-6 col-lg-7"><!-- open first column (used for image) -->
         </div><!-- end first column -->
         <div class="column col-md-6 col-lg-5"><!-- open second column (used for text) -->
-          <h3> Animation </h3><!-- heading for the project -->
+          <h3> MEMO. </h3><!-- heading for the project -->
           <p><!-- open paragraph -->
-            Here is an animation...
+            MEMO. offers users an easy to use note taking platform that keeps ideas and thoughts organized and categorzied all in one location.
           </p><!-- close paragraph -->
           <a href="nestegg.html" class="button">Read more</a><!-- button or link label -->
         </div><!-- end second column -->
@@ -87,11 +87,10 @@
 
 <footer id="contact">
   <div class="container">
-    <h2> Get In Touch </h2>
+    <h2> Contact </h2>
     <p>
-      Do you like my work and want to discuss opportunities?
-      Please get in touch. Call: <a href="tel:+8889990000">+8889990000</a> or Skype me at <a href="skype:hello.careerfoundry">hello.careerfoundry</a>.
-      Prefer sending an email?
+      Would you like to get in touch?
+      Send me an email or connect with me on social!
     </p>
       <div>
         <a href="mailto:chapin.r.mathews@gmail.com" class="button">Send Email</a><!-- button or link label -->
