update button link to memo project index.html

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <p><!-- open paragraph -->
             MEMO. offers users an easy to use note taking platform that keeps ideas and thoughts organized and categorzied all in one location.
           </p><!-- close paragraph -->
-          <a href="nestegg.html" class="button">Read more</a><!-- button or link label -->
+          <a href="memo.html" class="button">Read more</a><!-- button or link label -->
         </div><!-- end second column -->
       </div><!-- end row that holds (2) columns for the project -->
     </div>
