update project content index.html

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       <div class="row"><!-- open row that holds (2) columns for project -->
         <div class="column col-md-6 col-lg-7"><!-- open first column (used for image) -->
           <picture>
-            <source srcset="img/homepage/modhouse/modhouse@2.png" media="(max-width:767px)">
-            <img src="img/homepage/modhouse/modhouse@2.png" alt="Modhouse">
+            <source srcset="img/homepage/modhouse/modhouse@3x.png" media="(max-width:767px)">
+            <img src="img/homepage/modhouse/modhouse@3x.png" alt="Modhouse">
           </picture>
         </div><!-- end first column -->
         <div class="column col-md-6 col-lg-5"><!-- open second column (used for text) -->
@@ -58,8 +58,8 @@
       <div class="row"><!-- open row that holds (2) columns for project -->
         <div class="column col-md-6 col-lg-7"><!-- open first column (used for image) -->
           <picture>
-            <source srcset="img/homepage/nestegg/nestegg@2.png" media="(max-width:767px)">
-            <img src="img/homepage/nestegg/nestegg@2.png" alt="Nestegg">
+            <source srcset="img/homepage/nestegg/nesteggintro@3x.png" media="(max-width:767px)">
+            <img src="img/homepage/nestegg/nesteggintro@3x.png" alt="Nestegg">
           </picture>
         </div><!-- end first column -->
         <div class="column col-md-6 col-lg-5"><!-- open second column (used for text) -->
@@ -72,6 +72,10 @@
       </div><!-- end row that holds (2) columns for the project -->
       <div class="row"><!-- open row that holds (2) columns for project -->
         <div class="column col-md-6 col-lg-7"><!-- open first column (used for image) -->
+          <picture>
+            <source srcset="img/memo/memointro.svg" media="(max-width:767px)">
+            <img src="img/memo/memointro.svg" alt="MEMO.">
+          </picture>
         </div><!-- end first column -->
         <div class="column col-md-6 col-lg-5"><!-- open second column (used for text) -->
           <h3> MEMO. </h3><!-- heading for the project -->
