update project content modhouse.html

--- a/modhouse.html
+++ b/modhouse.html
@@ -36,8 +36,8 @@
   <div id="modhouseproj">
     <div class="container">
      <picture>
-      <source srcset="img/modhouse/modhouseintro@2.png" media="(max-width:767px)">
-      <img src="img/modhouse/modhouseintro@2.png" alt="Modhouse">
+      <source srcset="img/modhouse/modhouseintro@3x.png" media="(max-width:767px)">
+      <img src="img/modhouse/modhouseintro@3x.png" alt="Modhouse">
      </picture>
        <p>
          MODHOUSE connects users to ethically and sustainably produced
@@ -47,12 +47,12 @@
        <div class="row"><!-- Row -->
          <h2> The Process </h2>
           <picture>
-          <source srcset="img/modhouse/research@2.png" media="(max-width:767px)">
-          <img src="img/modhouse/research@2.png" alt="Research">
+          <source srcset="img/modhouse/modhousecasestudy@3x.png" media="(max-width:767px)">
+          <img src="img/modhouse/modhousecasestudy@3x.png" alt="CaseStudy">
           </picture>
           <picture>
-          <source srcset="img/modhouse/prototypes@2.png" media="(max-width:767px)">
-          <img src="img/modhouse/prototypes@2.png" alt="Process">
+          <source srcset="img/modhouse/prototypes@3x.png" media="(max-width:767px)">
+          <img src="img/modhouse/prototypes@3x.png" alt="Prototypes">
           </picture>
           <h3> Prototypes </h3>
           <p>
