--- a/modhouse.html
+++ b/modhouse.html
@@ -61,22 +61,22 @@
             Android Verison
             <a href="https://invis.io/YFZCWH2J3V2" Target="_blank">Modhouse on Android</a><!-- button or link label -->
           </p>
-          <h2> Conclusion </h2>
-          <h3> What Worked </h3>
+          <h2>Retrospective</h2>
+          <h3>What Worked</h3>
               <ul>
-                <li> Defining a clear and concise purpose for the product by articulating the problem the brand and product is observing and how it intends to solve that issue.</li>
+                <li> - Defining a clear and concise purpose for the product by articulating the problem the brand and product is observing and how it intends to solve that issue.</li>
 
                 <li> The users experience is designed with a successful function and flow. It is easy for users to browse products, view those product details, add them to a cart with and check out.</li>
 
-                <li> The color palette is warm and inviting. It works well with the environmental and design theme of the product.</li>
+                <li> - The color palette is warm and inviting. It works well with the environmental theme of the product.</li>
               </ul>
-          <h3> What To Work On </h3>
+          <h3>What To Work On</h3>
               <ul>
-                <li> Brand and product development was not as smooth as I wished it to be. Keep working on ways to improve time management and execution.</li>
+                <li> - Brand and product development was not as smooth as I wished it to be. Keep working on ways to improve time management and execution.</li>
 
-                <li> I ran into an issue with the status bar and header placement when implementing the android designs into the Galaxy S10 prototype. The placement and guideline to this particular device is slightly different than what basic material design calls for.</li>
+                <li> - I ran into an issue with the status bar and header placement when implementing the android designs into the Galaxy S10 prototype. The placement and guideline to this particular device is slightly different than what basic material design calls for.</li>
 
-                <li> Continue to find ways to improve the testing process and increase the number of test trials used for development. This will help bring you solutions and ideas with less guessing involved.</li>
+                <li> - Continue to find ways to improve the testing process and increase the number of test trials used for development. This will help bring you solutions and ideas with less guessing involved.</li>
               </ul>
          </div>
       </div>
@@ -85,11 +85,8 @@
 
 <footer id="contact">
   <div class="container">
-    <h2> Get In Touch </h2>
+    <h2> Contact </h2>
     <p>
-      Do you like my work and want to discuss opportunities?
-      Please get in touch. Call: <a href="tel:+8889990000">+8889990000</a> or Skype me at <a href="skype:hello.careerfoundry">hello.careerfoundry</a>.
-      Prefer sending an email?
     </p>
       <div>
         <a href="mailto:chapin.r.mathews@gmail.com" class="button">Send Email</a><!-- button or link label -->
