--- a/modhouse.html
+++ b/modhouse.html
@@ -66,7 +66,7 @@
               <ul>
                 <li> - Defining a clear and concise purpose for the product by articulating the problem the brand and product is observing and how it intends to solve that issue.</li>
 
-                <li> The users experience is designed with a successful function and flow. It is easy for users to browse products, view those product details, add them to a cart with and check out.</li>
+                <li> - The user experience is designed with a successful function and flow. It is easy for users to browse products, view product details, add products to the cart and check out.</li>
 
                 <li> - The color palette is warm and inviting. It works well with the environmental theme of the product.</li>
               </ul>
@@ -87,6 +87,8 @@
   <div class="container">
     <h2> Contact </h2>
     <p>
+      Would you like to get in touch?
+      Send me an email or connect with me on social!
     </p>
       <div>
         <a href="mailto:chapin.r.mathews@gmail.com" class="button">Send Email</a><!-- button or link label -->
