update project copy nestegg.html

--- a/nestegg.html
+++ b/nestegg.html
@@ -40,9 +40,7 @@
       <img src="img/modhouse/modhouseintro@2.png" alt="Modhouse">
      </picture>
        <p>
-         MODHOUSE connects users to ethically and sustainably produced
-         designer furntiure created in North America. Users have the option to
-         browse and purchase products that have been eco-rated.
+         NESTEGG assists users in reaching financial goals by customizing a uniquely tailored plan for optimum success. Users have several ways to utilize NESTEGG depending on their goals, within an easy to use interface.
        </p>
        <div class="row"><!-- Row -->
          <h2> The Process </h2>
@@ -91,20 +89,24 @@
           </p>
           <h2> Conclusion </h2>
           <h3> What Worked </h3>
+          <h2>Retrospective</h2>
+          <h3>What Worked</h3>
               <ul>
-                <li> Defining a clear and concise purpose for the product by articulating the problem the brand and product is observing and how it intends to solve that issue.</li>
+                <li> - Through the reseach and ideation phase, I was able to come up with a unqiue brand name and logo which corresponded well to the financial theme.</li>
 
-                <li> The users experience is designed with a successful function and flow. It is easy for users to browse products, view those product details, add them to a cart with and check out.</li>
+                <li> - The user flow for the designed screens is smooth and user friendly. Users can easily browse and add new goals, review expenses, and access account information easily.</li>
 
-                <li> The color palette is warm and inviting. It works well with the environmental and design theme of the product.</li>
+                <li> - It’s atypical of me to design with yellow as a primary color in mind but when the idea of a golden egg for the logo was reached, I accepted the challenge and was ecstatic to find secondary colors and design decisions that worked well with the primary color.</li>
               </ul>
-          <h3> What To Work On </h3>
+          <h3>What To Work On</h3>
               <ul>
-                <li> Brand and product development was not as smooth as I wished it to be. Keep working on ways to improve time management and execution.</li>
+                <li> - The duration of time it took to develop both the brand concept and design exceeded a necessary limit. Continue to experiment with brand development so that better ideas flow quicker and keep working on finding ways to shortcut your time in the design execution phase.</li>
 
-                <li> I ran into an issue with the status bar and header placement when implementing the android designs into the Galaxy S10 prototype. The placement and guideline to this particular device is slightly different than what basic material design calls for.</li>
+                <li> - Devlope more graphics for users to generate information from such as a graph or table for a visual overview of expenses.</li>
 
-                <li> Continue to find ways to improve the testing process and increase the number of test trials used for development. This will help bring you solutions and ideas with less guessing involved.</li>
+                <li> - Spend more time practicing the art of putting your brand into marketing materials. This will amplify the way potential users are attracted to your product.</li>
+
+                <li> - Testing during COVID 19 has created difficulty in getting users properly prepared and to provide adquate feedback during the testing process. Develop better ways to connect to your testers remotely, preparing and guiding them in more astute ways to ensure better results.</li>
               </ul>
          </div>
       </div>
@@ -113,11 +115,10 @@
 
 <footer id="contact">
   <div class="container">
-    <h2> Get In Touch </h2>
+    <h2> Contact </h2>
     <p>
-      Do you like my work and want to discuss opportunities?
-      Please get in touch. Call: <a href="tel:+8889990000">+8889990000</a> or Skype me at <a href="skype:hello.careerfoundry">hello.careerfoundry</a>.
-      Prefer sending an email?
+      Would you like to get in touch?
+      Send me an email or connect with me on social!
     </p>
       <div>
         <a href="mailto:chapin.r.mathews@gmail.com" class="button">Send Email</a><!-- button or link label -->
