--- a/nestegg.html
+++ b/nestegg.html
@@ -36,8 +36,8 @@
   <div id="nesteggproj">
     <div class="container">
      <picture>
-      <source srcset="img/modhouse/modhouseintro@2.png" media="(max-width:767px)">
-      <img src="img/modhouse/modhouseintro@2.png" alt="Modhouse">
+      <source srcset="img/nestegg/nesteggintro@3x.png" media="(max-width:767px)">
+      <img src="img/nestegg/nesteggintro@3x.png" alt="Nestegg">
      </picture>
        <p>
          NESTEGG assists users in reaching financial goals by customizing a uniquely tailored plan for optimum success. Users have several ways to utilize NESTEGG depending on their goals, within an easy to use interface.
@@ -45,8 +45,8 @@
        <div class="row"><!-- Row -->
          <h2> The Process </h2>
           <picture>
-          <source srcset="img/modhouse/research@2.png" media="(max-width:767px)">
-          <img src="img/modhouse/research@2.png" alt="Research">
+          <source srcset="img/nestegg/nesteggcasestudy@3x.png" media="(max-width:767px)">
+          <img src="img/nestegg/nesteggcasestudy@3x.png" alt="CaseStudy">
           </picture>
           <h2>Retrospective</h2>
           <h3>What Worked</h3>
