Target update for email button

--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
         Send me an email or connect with me on social!
       </p>
       <div>
-        <a href="mailto:chapin.r.mathews@gmail.com" class="button">Send Email</a><!-- button or link label -->
+        <a href="mailto:chapin.r.mathews@gmail.com" class="button" target="_blank" rel="noopener noreferrer">Send Email</a><!-- button or link label -->
       </div>
       <div class="social">
         <!--Social Media Layout and Placeholders-->
