--- a/modhouse.html
+++ b/modhouse.html
@@ -126,11 +126,12 @@
             </g>
           </svg>
         </a>
-       </div>
-       <p> COPYWRITE Chapin Mathews 2021 </p>
-  </div>
-</footer>
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-<script src="js/script.js"></script>
+      </div>
+      <p> Designed and Developed by Chapin Mathews 2021 </p>
+    </div>
+  </footer>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="js/script.js"></script>
 </body>
+
 </html>
