--- a/nestegg.html
+++ b/nestegg.html
@@ -119,11 +119,12 @@
             </g>
           </svg>
         </a>
-       </div>
-       <p> COPYWRITE Chapin Mathews 2021 </p>
-  </div>
-</footer>
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-<script src="js/script.js"></script>
-</body>
-</html>
+      </div>
+      <p> Designed and Developed by Chapin Mathews 2021 </p>
+    </div>
+  </footer>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="js/script.js"></script>
+  </body>
+
+  </html>
