--- a/about.html
+++ b/about.html
@@ -54,18 +54,12 @@
             <p>I find inspiration through travel and use film photography to document the places, people and things I cross paths with. These captured moments are a gate way to my creative process and assist in understanding how I visually see and
               filter the world around me.</p>
 
-            <h4>What’s a fun fact about you?</h4>
-            <p>In 2014 I received a Yoga Teacher Training Certificate from Shoshoni Yoga Ashram in Rollinsville, CO.</p>
-
             <h4>What’s your professional experience?</h4>
             <p>In 2009 I received a Bachelor of Fine Arts (BFA) degree in Material Studies from Virginia Commonwealth University (VCU) in Richmond, VA. I spent the next 10 years living and traveling across America as a creative producer. From
               2010-2015, I produced studio paintings and began working as a freelance graphic designer. In 2016, I reemerged with my childhood passion for photography and produced a photojournalism project titled “Diverse Dwellings”, covering stories
               on alternative living along the west coast. I went on to assist the obscure fashion-photographer Bil Brown in Los Angeles the following year in 2017. In 2018 I was the executive producer for a short film titled “ORIGIN” where I managed
               a cast and crew of 23 people and a $70k production budget. I have been the creative consultant for a number of businesses in California and Virginia. I currently work as a user interface designer and fine artist.</p>
 
-            <h4>Why do you think UI Design is valuable?</h4>
-            <p>Modern day technology has an undeniable influence on our lives today. In this current 'digital age', digital products and interfaces provide convenience and solutions to many basic tasks we perform daily. User Interface Design is one
-              key fundamental in creating balance between the visual esthetic of a product and the functionality and purpose it provides to a specific audience.</p>
             <a href="files/cv2021.pdf" class="button" target="_blank" rel="noopener noreferrer">View My Resume</a><!-- button or link label -->
           </div>
           <div class="col-md-12 col-lg-5">
@@ -77,8 +71,8 @@
                 <!-- Column -->
                 <h3> Relevant Skills </h3>
                 <ul>
-                  <li>UX Design and Research</li>
                   <li>UI Design</li>
+                  <li>UX Design and Research</li>
                   <li>Front-End Development</li>
                   <li>Graphic Design</li>
                   <li>Photography</li>
@@ -94,6 +88,8 @@
                   <li>Apple Macbook Pro</li>
                   <li>Sketch</li>
                   <li>Flinto</li>
+                  <li>Atom</li>
+                  <li>GitHub</li>
                   <li>Adobe Photoshop</li>
                   <li>Adobe Illustrator</li>
                   <li>Adobe Lightroom</li>
