--- a/extrasaved.html
+++ b/extrasaved.html
@@ -1047,3 +1047,11 @@ Please get in touch. Call: <a href="tel:+8889990000">+8889990000</a> or Skype me
       </div>
     </div>
 </main>
+
+
+<h4>Why do you think UI Design is valuable?</h4>
+<p>Modern day technology has an undeniable influence on our lives today. In this current 'digital age', digital products and interfaces provide convenience and solutions to many basic tasks we perform daily. User Interface Design is one
+  key fundamental in creating balance between the visual esthetic of a product and the functionality and purpose it provides to a specific audience.</p>
+
+  <h4>What’s a fun fact about you?</h4>
+  <p>In 2014 I received a Yoga Teacher Training Certificate from Shoshoni Yoga Ashram in Rollinsville, CO.</p>
