update hero copy
Still playing around with what will be in this section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
   <main>
     <div id="hero">
       <div class="container">
-        <h2>PORT/<br><span> FOLIO.</span></h2>
+        <h4>PORTFOLIO.|</h4>
+        <h5>a set of collected works showcasing a skill</h5>
       </div>
     </div>
     <div id="work">
